WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282345
FileReader adds xhr log entry to Network tab of Web Inspector, causing the browser to run out of memory and reload the document.
https://bugs.webkit.org/show_bug.cgi?id=282345
Summary
FileReader adds xhr log entry to Network tab of Web Inspector, causing the br...
Andrew Hodel
Reported
2024-10-30 11:58:16 PDT
Created
attachment 473084
[details]
Screenshot of the example showing infinitely repeating log entries. `FileReader` is not `XMLHttpRequest` and the Web Inspector's Network tab logs each use of `FileReader.readAsArrayBuffer` as an XHR request. Eventually this crashes the browser. This example proves it -
https://jsfiddle.net/53fxLr2y/
Attachments
Screenshot of the example showing infinitely repeating log entries.
(1.07 MB, image/png)
2024-10-30 11:58 PDT
,
Andrew Hodel
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Andrew Hodel
Comment 1
2024-10-30 12:05:30 PDT
Chrome does not log `FileReader.readAsArrayBuffer` as xhr requests and reload the document due to a lack of memory.
Radar WebKit Bug Importer
Comment 2
2024-10-31 11:02:08 PDT
<
rdar://problem/139013160
>
Karl Dubost
Comment 3
2024-11-10 21:13:51 PST
Firefox: It does generate in the console log a read 4 which is being incremented (like Safari and Chrome) BUT does NOT generate more requests in the Network Tab. @Razvan What do you think? I wonder if this could help.
https://searchfox.org/wubkat/search?q=setHiddenFromInspector&redirect=false
Devin Rousso
Comment 4
2024-11-19 19:45:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36873
EWS
Comment 5
2024-11-20 10:11:34 PST
Committed
286861@main
(ef5a68bffdb0): <
https://commits.webkit.org/286861@main
> Reviewed commits have been landed. Closing PR #36873 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug