FileReader adds xhr log entry to Network tab of Web Inspector, causing the browser to run out of memory and reload the document. https://bugs.webkit.org/show_bug.cgi?id=282345

Reviewed by BJ Burg.

It's not really accurate to treat these as network activity (at least from the perspective of the Network Tab).

* Source/WebCore/fileapi/FileReaderLoader.cpp:
(WebCore::FileReaderLoader::start):

* LayoutTests/inspector/network/no-request-from-FileReader.html: Added.
* LayoutTests/inspector/network/no-request-from-FileReader-expected.txt: Added.

Canonical link: https://commits.webkit.org/286861@main